// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render AccountList with accounts 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Accounts
    </div>
    <div
      className="show-for-desktop"
    >
      Accounts
    </div>
    <div
      className="show-for-desktop"
    >
      Description
    </div>
  </div>
  <div
    className="list-body"
  >
    <AccountListItem
      account="BoA"
      description="dog costs"
      id="1"
      key="1"
    />
    <AccountListItem
      account="Citi Bank"
      description=""
      id="2"
      key="2"
    />
    <AccountListItem
      account="Chase Bank"
      description="credit card"
      id="3"
      key="3"
    />
  </div>
</div>
`;

exports[`should render AccountList with no accounts 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      Accounts
    </div>
    <div
      className="show-for-desktop"
    >
      Accounts
    </div>
    <div
      className="show-for-desktop"
    >
      Description
    </div>
  </div>
  <div
    className="list-body"
  >
    <div
      className="list-item--message"
    >
      <span>
        No accounts to show
      </span>
    </div>
  </div>
</div>
`;
